# OdooAli

./: .cspell.json  .flake8  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .stylelintignore  .stylelintrc.json  AI.md  Dockerfile  Dockerfile.prod  GitPatchUpdate.sh  GitUpdate.sh  OdooAli.postman_collection.json  OdooAli.postman_environment.json  README.md  Setup.sh  babel.config.js  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  generate_ssl.sh  jest.config.cjs  jest.config.js  odooali-dashboard.json  odooali-prod-fix.patch  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  pytest.ini  requirements.txt  setup-pr.sh  setup.cfg  tailwind.config.js  tall eslint --save-dev  tox.ini  (+2 more)
.devcontainer/: devcontainer.json
.github/workflows/: .ci.yml  tests.yml
backend/: manage.py  requirements.txt
backend/OdooALI/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
backend/OdooALI/myapp/: urls.py  views.py
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
backend/companies/: models.py
backend/notifications/: consumers.py  tasks.py  views.py
backend/notifications/models/: notification.py
backend/products/: admin.py  consumers.py  models.py  permissions.py  routing.py  services.py  tasks.py  views.py
backend/products/models/: product.py
backend/products/tests/: test_permissions.py
backend/purchase/: __init__.py  consumers.py  models.py  purchase_order.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/purchase/models/: __init__.py
backend/purchase/tests/: test_purchase_order.py
backend/sales/: consumers.py  permissions.py  services.py  tasks.py  views.py
backend/sales/models/: __init__.py  sales_order.py
backend/stock/: models.py  services.py  tasks.py  views.py
backend/stock/models/: stock.py
backend/users/: models.py  permissions.py  services.py
backend/users/management/commands/: init_roles.py
backend/users/models/: user.py
backup_20251001_021445/: docker-compose.prod.yml
backup_20251001_022013/: Dockerfile.prod
frontend/: Dockerfile.prod  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/nginx/: default.conf  prod.conf
frontend/nginx/ssl/: server.crt  server.key
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index.ejs  main.tsx
frontend/src/api/: api.ts  auth.js
frontend/src/components/: Dashboard.jsx  Dashboard.tsx  Header.jsx  Home.jsx  Login.jsx  NotFound.jsx  NotificationPanel.tsx  ProductInlineEdit.tsx  Register.jsx
frontend/src/components/KanbanView/: ProductKanban.tsx  PurchaseKanban.tsx  SalesKanban.tsx
frontend/src/components/TreeView/: ProductTree.tsx
frontend/src/context/: AuthProvider.jsx
frontend/src/contexts/: AuthContext.tsx  AuthProvider.jsx  CompanyContext.tsx  DashboardContext.tsx
frontend/src/features/auth/: authSlice.js  authSlice.ts
frontend/src/hooks/: useProductWS.ts  usePurchaseWS.ts  useUserRole.ts
frontend/src/pages/: Home.jsx  Login.jsx  PurchasePage.jsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: authSlice.js  authSlice.ts  index.ts  productsSlice.ts  purchaseSlice.ts  salesSlice.ts  stockSlice.ts  store.ts
frontend/src/types/: index.ts
monitoring/: promtail-config.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/alerts/: odooali-alerts.yml
monitoring/grafana/dashboards/: odooali-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: odooali-rules.yml
templates/: add_product.html  edit_stock.html  home.html  movement_history.html
(+1 files in other folders)
